# Discadelta

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: CI.yml  cmake-single-platform.yml
cmake/: DiscadeltaConfig.cmake.in
core/: ufox_discadelta_core.cppm  ufox_discadelta_lib.cppm
docs/: discadelta-algorithm-constraints.md  discadelta-algorithm-dynamic-placing.md  discadelta-algorithm-nested.md  discadelta-algorithm-optimization.md  discadelta-algorithm-rect-layout.md
samples/: chapter_01_sample.cpp  chapter_02_sample.cpp  chapter_03_sample.cpp  chapter_04_sample.cpp  chapter_05_sample.cpp  linear_sample.cpp  rect_sample.cpp
src/: CMakeLists.txt  ufox_discadelta_core.cppm  ufox_discadelta_lib.cppm
